# SBBD

./: .env.swp  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.dev.yml  manage.py  pyproject.toml
.github/: .gitmessage.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/workflows/: checks.yml
apps/accounts/: models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_alter_transaction_tx_type.py  0003_alter_transaction_tx_type.py
apps/analysis/: analyzers.py  models.py  serializers.py  tasks.py  tests.py  urls.py  views.py
apps/analysis/migrations/: 0001_initial.py
apps/notification/: apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/notification/migrations/: 0001_initial.py
apps/transactions/: models.py  serializers.py  services.py  urls.py  views.py
apps/transactions/migrations/: 0001_initial.py
apps/users/: admin.py  models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py  0002_alter_user_managers.py
config/: celery.py  urls.py
config/settings/: base.py  dev.py  prod.py
scripts/: run.sh
users/: views.py
